test/inference/good/typeclass_entailment_by_inheritance.mlt
class H 'a { h : 'a -> int }
class H 'a => I 'a { i : 'a -> unit }
let ['a] [I 'a] use_h_in_i = ['a] fun (x : 'a) -> h x
