test/inference/bad/typeclass_use_rw.mlt
class RW 'a { read : unit -> 'a ; write : 'a -> unit }
let r = write (read ())
